# bqm

./: .copier-answers.yml  .pre-commit-config.yaml  CLAUDE.md  README.md  bigquery_information_schema.md  enhancement-ideas.md  fetch_information_schema_docs.py  justfile  main.py  makefile  pyproject.toml
.github/workflows/: ci.yml  publish.yml  update.yml
bqm/: cli.py  schema.py
tests/: conftest.py  test_bqm.py
tests/__snapshots__/: test_bqm.ambr
tests/integration/: conftest.py  test_integration.py
tests/integration/__snapshots__/: test_integration.ambr
