[project]
name = "bqm"
version = "0.1a1"
description = "Bigquery meta data table utility"
readme = "README.md"
authors = [{name = "kj"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10, <3.14"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click",
    "google-cloud-bigquery>=3.27.0",
    "rich>=13.9.4",
    "trogon>=0.6.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/kj-9/bqm"
Changelog = "https://github.com/kj-9/bqm/releases"
Issues = "https://github.com/kj-9/bqm/issues"
CI = "https://github.com/kj-9/bqm/actions"

[project.scripts]
bqm = "bqm.cli:cli"

[project.optional-dependencies]
test = ["pytest", "pre-commit", "cogapp", "syrupy"]

# see also: https://beta.ruff.rs/docs/configuration/#using-pyprojecttoml
[tool.ruff.lint]
select = [
    "E", "F", "I",
    # "D", turn off requiring docstrings
    "W", "PL", "B", "UP"
]

ignore = [
    "E501", # ignore line length violations
    "PLR2004", # ignore magic values, see also: https://docs.astral.sh/ruff/rules/magic-value-comparison/
    "PLR0913", # ignore too many arguments
]

[tool.ruff.lint.per-file-ignores]
"*__init__.py" = ["F401"] # ignore `E401` (unused import) in all `__init__.py` files

[tool.ruff.lint.pydocstyle]
convention = "google"
